--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="android-chrome" sizes="192x192" href="./favicon/android-chrome-192x192.png">
+    <link rel="android-chrome" sizes="512x512" href="./favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="icon" href="./favicon/favicon.ico">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Noteskeeper: приложение для заметок</title>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
